--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.2",
     "babel-jest": "26.6.3",
+    "browser-sync": "2.26.14",
     "chalk": "4.1.0",
     "eslint": "7.23.0",
     "eslint-config-prettier": "8.1.0",
