--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "jest --config jest.config.json"
   },
   "devDependencies": {
+    "@vue/compiler-sfc": "3.2.11",
     "@babel/core": "7.13.14",
     "@vue/test-utils": "1.1.3",
     "babel-core": "7.0.0-bridge.0",
